src/test/deca/context/invalid/personalTests/instanceofFloat.deca
class A{
    int a;
}

{
    float a = 10;
    if(a instanceof A){
        println("true");
    }
    else{
        println("false");
    }
}